# chapar

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
kafka_sink/: Cargo.toml
kafka_sink/src/: errors.rs  lib.rs
outbox/: Cargo.toml
outbox/src/: errors.rs  lib.rs
outbox_mysql/: Cargo.toml
outbox_mysql/src/: config.rs  errors.rs  lib.rs
savepoint/: Cargo.toml
savepoint/src/: errors.rs  lib.rs
service/: Cargo.toml
service/src/: config.rs  main.rs  service.rs
