[package]
name = "kafka_sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["dynamic-linking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"