[package]
name = "outbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "^0.6", features = [ "runtime-tokio-rustls", "mysql", "macros", "time" ] }
tokio = { version = "1", features = ["full"] }
time = "0.3.20"