[package]
name = "outbox_mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
outbox = { path = "../outbox" }
sqlx = { version = "^0.6", features = [ "runtime-tokio-rustls", "mysql", "macros", "time" ] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = "1.0"
