[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
outbox = { path = "../outbox" }
kafka_sink = { path = "../kafka_sink" }
savepoint = { path = "../savepoint" }
serde = "1.0"
envy = "0.4"
dotenv = "0.15"
log = "0.4"
simple_logger = "4.1.0"